[gd_scene load_steps=24 format=2]

[ext_resource path="res://img Pokemon/img NewGame/UISpeack.png" type="Texture" id=1]
[ext_resource path="res://img Pokemon/img NewGame/cercleNewGame.png" type="Texture" id=2]
[ext_resource path="res://img Pokemon/img NewGame/player.png" type="Texture" id=3]
[ext_resource path="res://Font/45Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Others/NewGame/NewGame.gd" type="Script" id=5]
[ext_resource path="res://img Pokemon/All Pokemon/Front/29.png" type="Texture" id=6]
[ext_resource path="res://img Pokemon/img Fight/Graphique/PokeballOpen.png" type="Texture" id=7]
[ext_resource path="res://img Pokemon/img Fight/Graphique/Pokeball.png" type="Texture" id=8]
[ext_resource path="res://img Pokemon/img NewGame/Chen.png" type="Texture" id=9]
[ext_resource path="res://img Pokemon/img NewGame/rival.png" type="Texture" id=10]
[ext_resource path="res://img Pokemon/img NewGame/LastAnimation.png" type="Texture" id=11]
[ext_resource path="res://Font/24Font.tres" type="DynamicFont" id=12]
[ext_resource path="res://img Pokemon/All Pokemon/Front/1.png" type="Texture" id=13]
[ext_resource path="res://img Pokemon/All Pokemon/Front/4.png" type="Texture" id=14]
[ext_resource path="res://img Pokemon/All Pokemon/Front/7.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "ShowText"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "ChangeCharacter"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Chen:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Chen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ChangeCharacter 1"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Chen:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Chen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ChangeCharacter 2"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Chen:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Chen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UISpeack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Chen:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Chen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Chen/Pokeball:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Chen/Pokemon:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LineEdit:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "LeaveScene"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/LastAnimation:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 2.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/LastAnimation:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer/LastAnimation:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2, 1.4, 1.5, 1.7, 1.8, 2, 2.1, 2.3, 2.4, 2.6, 2.85, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.75, 0.75 ), Vector2( 0.75, 0.75 ), Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.15, 0.15 ), Vector2( 0.15, 0.15 ), Vector2( 0.15, 0.15 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/LastAnimation:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.2, 1.4, 1.5, 1.7, 1.8, 2, 2.1, 2.3, 2.4, 2.6, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 429, 77 ), Vector2( 429, 77 ), Vector2( 440, 120 ), Vector2( 440, 120 ), Vector2( 454.847, 172.633 ), Vector2( 454.847, 172.633 ), Vector2( 487.112, 188.592 ), Vector2( 487.112, 188.592 ), Vector2( 494.272, 201.479 ), Vector2( 494.272, 201.479 ), Vector2( 494.272, 201.479 ), Vector2( 429, 77 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Chen/Pokemon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Chen/Pokemon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.984314, 0.0666667, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Chen/Pokemon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4.5, 4.5 ), Vector2( 1, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Chen/Pokemon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -135.525, 90.0671 ), Vector2( -87.2905, 19.2234 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.968627, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Chen/Pokeball:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 8 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Chen/Pokeball:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Chen/Pokeball:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Chen/Pokeball:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.988235, 0.32549, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Chen/Pokeball:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Chen/Pokemon:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Chen/Pokemon:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Chen/Pokemon:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.5, 4.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Chen/Pokemon:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -106.886, 94.5891 ) ]
}

[node name="NewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
margin_right = 1026.0
margin_bottom = 600.0
color = Color( 0.878431, 0.941176, 0.909804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGUnder1" type="ColorRect" parent="BG"]
margin_top = 350.0
margin_right = 1026.0
margin_bottom = 395.0
color = Color( 0.690196, 0.815686, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGUnder2" type="ColorRect" parent="BG"]
margin_top = 395.232
margin_right = 1026.0
margin_bottom = 440.232
color = Color( 0.501961, 0.690196, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGUnder3" type="ColorRect" parent="BG"]
margin_top = 437.0
margin_right = 1026.0
margin_bottom = 600.0
color = Color( 0.25098, 0.533333, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="BG"]
margin_left = 271.142
margin_top = 343.604
margin_right = 764.142
margin_bottom = 457.604
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chen" type="Sprite" parent="."]
position = Vector2( 525.463, 265.187 )
texture = ExtResource( 9 )

[node name="Pokeball" type="Sprite" parent="Chen"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -92.1319, -8.61053 )
texture = ExtResource( 8 )

[node name="Pokemon" type="Sprite" parent="Chen"]
visible = false
position = Vector2( -106.886, 94.5891 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 6 )

[node name="UISpeack" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 441.003
margin_right = 1004.0
margin_bottom = 598.003
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UISpeack"]
margin_left = 50.05
margin_top = 26.0
margin_right = 928.05
margin_bottom = 132.0
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowText" type="AnimationPlayer" parent="UISpeack"]
anims/ShowText = SubResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_left = 275.661
margin_top = 233.569
margin_right = 761.661
margin_bottom = 316.569
custom_fonts/font = ExtResource( 4 )
text = "Name"
align = 1
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="."]
visible = false
margin_left = 275.661
margin_top = 233.569
margin_right = 761.661
margin_bottom = 316.569
custom_fonts/font = ExtResource( 4 )
text = "Name"
align = 1
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bulbizarre" type="Button" parent="."]
margin_left = 18.0787
margin_top = 158.772
margin_right = 298.079
margin_bottom = 328.772
custom_fonts/font = ExtResource( 12 )
text = "Bulbizarre"
icon = ExtResource( 13 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salameche" type="Button" parent="."]
margin_left = 375.0
margin_top = 160.0
margin_right = 655.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 12 )
text = "Salameche"
icon = ExtResource( 14 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carapuce" type="Button" parent="."]
margin_left = 725.0
margin_top = 160.0
margin_right = 1005.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 12 )
text = "Carapuce"
icon = ExtResource( 15 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="."]
margin_left = 371.136
margin_top = 349.568
margin_right = 658.136
margin_bottom = 413.568
custom_fonts/font = ExtResource( 12 )
text = "Confirmer ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ChangeCharacter = SubResource( 2 )
"anims/ChangeCharacter 1" = SubResource( 3 )
"anims/ChangeCharacter 2" = SubResource( 4 )
anims/Enter = SubResource( 5 )
anims/LeaveScene = SubResource( 6 )
anims/RecallAPokemon = SubResource( 7 )
anims/ShowAPokemon = SubResource( 8 )

[node name="LastAnimation" type="TextureRect" parent="AnimationPlayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 429.0
margin_top = 77.0
margin_right = 629.001
margin_bottom = 447.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_entered" from="." to="." method="_on_Control_tree_entered"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="LineEdit2" to="." method="_on_LineEdit2_text_entered"]
[connection signal="pressed" from="Bulbizarre" to="." method="_on_Bulbizarre_pressed"]
[connection signal="pressed" from="Salameche" to="." method="_on_Salameche_pressed"]
[connection signal="pressed" from="Carapuce" to="." method="_on_Carapuce_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
